--- a/app/views/games/show.erb
+++ b/app/views/games/show.erb
@@ -11,6 +11,6 @@
 <br>
 <p><a href="/games/<%=@game.id%>/edit">Make changes to this entry?</a></p>
 
-<p><a href="/games/delete">Don't own it anymore?</a></p>
+<p><a href="/games/delete/">Don't own it anymore?</a></p>
 
 <p><a href="/games">Back to my index.</a></p>
