--- a/app/views/games/new.erb
+++ b/app/views/games/new.erb
@@ -2,7 +2,7 @@
 
 <h1>Register that newness in your organizer!!</h1>
 
-<form method="post" action="/games/index">
+<form method="POST" action="/games">
 <h3>Title: </h3><input type="text" name="title">
 <h3>Console: </h3><input type="text" name="console">
 <h3>Genre: </h3><input type="text" name="genre">
