--- a/app/views/games/index.erb
+++ b/app/views/games/index.erb
@@ -5,4 +5,9 @@
 <%@games.each do |game|%>
 <li><a href='/games/<%= game.id%>'><%=game.title%></a></li><br>
 <%end%>
-</ol>
+</ol><br>
+<br>
+<br>
+<br>
+
+<p><a href="/games/new">Did you pick up anything new today?</a></p>
