--- a/app/views/games/show.erb
+++ b/app/views/games/show.erb
@@ -9,8 +9,12 @@
 <p>Have you completed it?  <%= @game.complete %></p><br>
 <br>
 <br>
-<p><a href="/games/<%=@game.id%>/edit">Make changes to this entry?</a></p>
+<p><a href="/games/<%=@game.id%>/edit">Make changes to this entry?</a></p><br>
 
-<p><a href="/games/delete/">Don't own it anymore?</a></p>
+<p><a href="/games">Back to my index.</a></p><br>
 
-<p><a href="/games">Back to my index.</a></p>
+<p>Don't own it anymore?</p>
+<form method="POST" action="/games/<%= @game.id %>">
+<input type="hidden" id="hidden" name="_method" value="DELETE">
+</form>
+
