--- a/app/views/games/show.erb
+++ b/app/views/games/show.erb
@@ -16,5 +16,6 @@
 <p>Don't own it anymore?</p>
 <form method="POST" action="/games/<%= @game.id %>">
 <input type="hidden" id="hidden" name="_method" value="DELETE">
+<input type="submit" value="Delete">
 </form>
 
