--- a/app/views/games/edit.erb
+++ b/app/views/games/edit.erb
@@ -4,10 +4,10 @@
 
 <form method="POST" action="/games/<%= @game.id %>">
 <input type="hidden" name="_method" value="PATCH">
-<h3>Title: </h3><input  type="text" name="title">
-<h3>Console: </h3><input type="text" name="console">
-<h3>Genre: </h3><input type="text" name="genre">
-<h3>What's it about? </h3><input type="text" name="description">
-<h3>Have you finished? </h3><input type="text" name="complete">
+<h3>Title: </h3><input  type="text" name="title" value="<%= @game.title %>">
+<h3>Console: </h3><input type="text" name="console" value="<%= @game.console %>">
+<h3>Genre: </h3><input type="text" name="genre" value="<%= @game.genre %>">
+<h3>What's it about? </h3><input type="text" name="description" value="<%= @game.description %>">
+<h3>Have you finished? </h3><input type="text" name="complete" value="<%= @game.complete %>">
 <input type="submit" value="Submit">
 </form>
