--- a/app/views/games/new.erb
+++ b/app/views/games/new.erb
@@ -7,6 +7,6 @@
 <h3>Console: </h3><input type="text" name="console">
 <h3>Genre: </h3><input type="text" name="genre">
 <h3>What's it about? </h3><input type="text" name="description">
-<h3>Have you finished? </h3><input type="text" name="complete">
+<h3>Completed: </h3><input type="text" name="complete"><br><br>
 <input type="submit" value="Submit">
 </form>
