--- a/app/views/games/new.erb
+++ b/app/views/games/new.erb
@@ -7,6 +7,13 @@
 <h3>Console: </h3><input type="text" name="console">
 <h3>Genre: </h3><input type="text" name="genre">
 <h3>What's it about? </h3><input type="text" name="description">
-<h3>Completed: </h3><input type="text" name="complete"><br><br>
+<h3>Completed?: </h3>
+  <input type="radio" id="true" name="complete" value="true">
+  <label for="true">I have</label><br>
+  <input type="radio" id="false" name="complete" value="false">
+  <label for="false">I have not</label><br>
+  <br>
+
 <input type="submit" value="Submit">
 </form>
+
