--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,7 @@
       <%end%>
       
       <footer class="branding">
-        <small>&copy; 2020 <strong>VgOrganizer</strong></small>
+        <small>&copy; 2020 <strong>Jonathan Cohen</strong></small>
       </footer>
     </div>
 
