--- a/app/views/users/sign_up.erb
+++ b/app/views/users/sign_up.erb
@@ -3,8 +3,8 @@
 
 <p>Set up an account!</p>
 <form method="post" action="/signup">
-<p>Username:</p><input type="text" name="username">
-<p>Email:</p><input type="text" name="email">
-<p>Password:</p><input type="password" name="password">
+<input type="text" name="username" placeholder="Username:">
+<input type="text" name="email" placeholder="Email:">
+<input type="password" name="password" placeholder="Password:">
 <input type="submit" value="Sign Up!">
 </form>
