--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,7 +13,10 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-image: url("/images/vg_controller.jpg");
+      background-repeat: repeat;
+      background-attachment: fixed;
+      background-size: 75% 100%;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
@@ -28,27 +31,28 @@
     max-width: 960px;
     padding: 2.25%; /* 18px / 800px */
     width: 85%;
+    opacity: 0.9;
   }
 
   h1 {
-    font-size: 36px;
+    font-size: 32px;
     line-height: 54px;
-  }
+    }
 
   h2 {
     border-bottom: 2px solid #ccc;
     font-size: 24px;
     line-height: 36px;
-    margin-bottom: 16px;
+    margin-bottom: 11px;
   }
 
   h3 {
-    font-size: 18px;
+    font-size: 17px;
     line-height: 36px;
   }
 
   p {
-    margin-bottom: 18px;
+    margin-bottom: 12px;
   }
 
   .main {
