working on CSS ideas for the text of the Web application

--- a/app/views/games/show.erb
+++ b/app/views/games/show.erb
@@ -1,6 +1,7 @@
 <h1><u><%= @game.title %></u></h1>
+<br>
 
-<h3>Game Description: <%= @game.description %></h3><br>
+<h3><u>Game Description: </u> <%= @game.description %></h3><br>
 
 <p>You own it on the: <%= @game.console %></p><br>
 
