--- a/app/views/games/index.erb
+++ b/app/views/games/index.erb
@@ -2,7 +2,7 @@
 
 <h1>Welcome to your Collection, <%= @user.username %>!</h1><br>
 <%@games.each do |game|%>
-<a href='/games/<%= game.id%>'><%=game.title%></a><br>
+<p><a href='/games/<%= game.id%>'><%=game.title%></a></p><br>
 <%end%>
 <br>
 <br>
