--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,6 +11,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<link href="https://fonts.googleapis.com/css2?family=Changa:wght@300&family=Orbitron&family=Play&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
