--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -16,7 +16,7 @@
     background-image: url("/images/vg_controller.jpg");
       background-repeat: repeat;
       background-attachment: fixed;
-      background-size: 75% 100%;
+      background-size: 100% 100%;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
@@ -47,12 +47,15 @@
   }
 
   h3 {
-    font-size: 17px;
-    line-height: 36px;
+    font-family: 'Changa', sans-serif;
+    font-size: 22px;
+    line-height: 30px;
   }
 
   p {
-    margin-bottom: 12px;
+    font-family: 'Changa', sans-serif;
+    font-size: 22px;
+    margin-bottom: 17px;
   }
 
   .main {
